[project]
name = "b3"
version = "1.0.0"
description = "|30+| B3 Bot"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = []

[dependency-groups]
dev = [
    "mockito>=2.0.4",
    "mypy>=2.1.0",
    "prek>=0.4.0",
    "pytest>=9.0.3",
]

[tool.mypy]
packages = "b3"
ignore_errors = true

[tool.ruff]
target-version = "py314"
extend-exclude = [".*"]

[tool.ruff.lint]
select = [
#    "A",  # shadowing builtins
#    "ARG",  # unused arguments
    "B",  # bugbear
    "C40",  # comprehensions
    "DTZ",  # checks for naive datetimes
    "E",  # pycodestyle (errors)
#    "ERA",  # eradicate (commented out code)
    "F",  # Pyflakes
#    "FBT",  # boolean trap
    "I",   # isort
    "ISC",  # Implicit String Concat
#    "N",  # pep8-naming
    "PIE",  # misc lints
#    "PL",  # Pylint
#    "PTH",  # favor pahtlib.Path
#    "RET",  # returns
    "RUF",  # Ruff-specific rules
    "S",  # bandit
    "SIM",  # simplify
#    "T20",  # print statements
#    "TRY",  # tryceratops
#    "UP",  # pyupgrade
    "W",  # pycodestyle (warnings)
]
ignore = [
    "B034",
    "E501",
    "E721",
    "ISC001",
    "PIE790",
    "PIE808",
    "RUF010",
    "RUF012",
    "RUF013",
    "RUF015",
    "SIM118",
]

[tool.ruff.lint.per-file-ignores]
"b3/plugins/hof.py" = ["S608"]  # Possible SQL Injection
"b3/storage/*" = ["S608"]  # Possible SQL Injection
"tests/*" = [
    "S101",  # Use of assert
    "S106",  # Possible hardcoded password
]
